# deepcell-imaging

./: .envrc.template  .gcloudignore  .gitattributes  .gitignore  README.md  find-unlimited-quotas.sh  pyproject.toml  requirements-mac-arm64.txt  requirements-no-deps.txt  requirements.txt  run-sample.py  sample3_raw_predicted_maxima.npz  setup.py
batch/: README.md  example-config.json  run-job.py  run-multistep-job.py  run-qupath-job.py  test-samples.sh
benchmarking/: 20240722_smart_open_and_gs_fastcopy_benchmark.py  README.md  bigquery_benchmarking_schema.json  gs_fastcopy_benchmark.py
container/: Dockerfile  README.md  batch-davidinfra.json  batch-nogpu.json  batch.json  build-and-push-gce-container.sh  build-batch-container.yaml  cloud-build.sh  gce-driver-install-startup-script.sh  push-dockerhub-container.yaml
deepcell_imaging/: benchmark_utils.py  gcloud_storage_utils.py  gcp_batch_jobs.py  gcp_logging.py  mesmer_app.py  mesmer_no_postprocess.py  notifications.py  numpy_utils.py
notebooks/: Benchmarking-Postprocess.ipynb  Download-DeepCell-Data.ipynb  Extract-ArkExample-Sample-Channels.ipynb  Extract-Channels.ipynb  Extract-Mesmer-Sample-Channels.ipynb  Extract-Sample-Channels.ipynb  Extract-Sample_hbm458.nffx.729_451Mpx.ipynb  Extract-Sample_hbm873.pcpz.247.904M-px.ipynb  Extract-Sample_human-prostate-cancer-20210727-725mb.ipynb  Extract-Sample_preview-human-breast-20221103-418mb.ipynb  Generate-Classification-Report.ipynb  Predict-Segments.ipynb  README.md  Visualize-Inputs.ipynb  Visualize-Segmentation.ipynb  imaging_helpers.py
sample-data/: README.md
(+151 files in other folders)
