[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcell-imaging"
dynamic = ["version"]

[tool.setuptools]
packages = ["deepcell_imaging", "deepcell_imaging.gcp_batch_jobs", "deepcell_imaging.utils"]
py-modules = ["__init__"] # dash, not underscore
