[build-system]
requires = ["setuptools >= 61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcell-imaging"
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
dev = ["black", "pytest", "pytest-cov"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
# Let auto-discovery do its thing with src-layout.

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
